Better requirement for php 5.4

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": ">5.4",
+        "php": ">=5.4.0",
         "silex/silex": "1.0.*@dev",
         "sailthru/sailthru-php5-client": "dev-master",
         "symfony/class-loader": ">2.1",
