--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "symfony/config": ">2.1",
         "symfony/console": ">2.1",
         "symfony/yaml": ">2.1",
-        "kriswallsmith/buzz": "dev-travis"
+        "kriswallsmith/buzz": "dev-master"
     },
     "autoload": {
         "psr-0": { "SailthruToolkit": "src" }
